--- a/Website_CSS.css
+++ b/Website_CSS.css
@@ -1,16 +1,14 @@
 .container {
-    position: relative;
-  }
+  position: relative;
+  float: right;
+}
+
+.topRight{
   
-  .topleft {
-    position: absolute;
-    top: 8px;
-    left: 16px;
-    font-size: 18px;
-  }
-  
-  img { 
-    width: 100%;
-    height: auto;
-    opacity: 0.3;
-  }
+}
+
+img { 
+  width: 150px;
+  height: 100px;
+  opacity: 0.3;
+}
