--- a/Website_CSS.css
+++ b/Website_CSS.css
@@ -1,6 +1,6 @@
 .container {
   position: relative;
-  /* float: right; */
+  float: right;
 }
 
 /* .topRight{
@@ -10,5 +10,5 @@
 img { 
   width: 150px;
   height: 100px;
-  opacity: 0.3;
+  /* opacity: 0.3; */
 }
