--- a/memes.css
+++ b/memes.css
@@ -1,3 +1,16 @@
+body{
+    background-color: rgb(30 30 30);
+    color: white;
+}
+/* ol{
+   border: 5px; 
+   border-color: silver; 
+} */
+
+a{
+    color: gold;
+}
+
 #meme{
     width: 150px;
     height: 150px;
@@ -21,14 +34,33 @@
 
 } */
 
-#menu{
-    float: left;
-    width: 200px;
-    height: 200px;
-    border: 5px; 
-    border-color: silver; 
-    border-style: groove; 
- }
+#menu {
+    width: 190px;
+    height: 20px;
+    border: 5px;
+    position: relative;
+    left: -5%;
+    top: 0%;
+    margin: 10px;
+  }
+
+ h1{
+    position: relative;
+    left: 5%;
+    top: 286%;
+}
+
+#menuBorder {
+    display: block;
+    float: none;
+    border-color: silver;
+    border-style: groove;
+    position: absolute;
+    left: 43%;
+    top: 35%;
+    height: 81px;
+    width: 187px;
+  }
 
  nav{
     margin: auto;
@@ -39,6 +71,7 @@
 
  #memes{
     top: 350px;
+    left: 60px;
     display: flex;
     flex-wrap: wrap;
     float: none;
@@ -46,14 +79,15 @@
     position: absolute;
     margin: auto;
  }
-h2{
-    top: 320px; 
-
-}
+ h2 {
+    position: absolute;
+    left: 43%;
+    top: 70%;
+  }
 
 .meme{
-    width: 180px;
-    height: 150px;
+    width: 270px;
+    height: 225px;
     border: 5px;
     border-color: gold; 
     border-style: groove;
@@ -64,3 +98,40 @@ h2{
     position: absolute;
  } */
 
+form{
+    position: fixed;
+    left: 45%;
+    top: 34%;
+    border: 5px;
+    border-color: gold;
+    border-style: groove;
+}
+
+
+
+#form_Background{
+    width: 300px;
+    height: 322px;
+    position: absolute;
+    left: 40%;
+    top: 25%;
+    background-color: rgb(90 90 90);
+    border: 5px;
+    border-style: groove;
+    border-color: blue;
+    border-radius: 10px;
+}
+
+#formSubmit{
+    margin: 10px;
+    border: 10px;
+    display: inline-block;
+}
+
+#submit{
+   float: none;
+}
+
+#login{
+    float: none;
+ }
